--- a/plugin.xml
+++ b/plugin.xml
@@ -2,42 +2,32 @@
 
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="com.badrit.MacAddress"
+  id="com.artraktiv.NavHide"
   version="0.1.0">
-  <name>MacAddress</name>
-  <description>Cordova MacAddress Plugin</description>
+  <name>NavHide</name>
+  <description>Cordova NavHide Plugin</description>
   <license>Apache 2.0</license>
-  <keywords>cordova,MacAddress</keywords>
+  <keywords>cordova,NavHide</keywords>
 
 
-  <js-module src="www/MacAddress.js" name="MacAddress">
-    <clobbers target="window.MacAddress" />
+  <js-module src="www/NavHide.js" name="NavHide">
+    <clobbers target="window.NavHide" />
   </js-module>
 
   <!-- android -->
   <platform name="android">
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="MacAddressPlugin">
-        <param name="android-package" value="com.badrit.MacAddress.MacAddressPlugin"/>
+      <feature name="NavHidePlugin">
+        <param name="android-package" value="com.artraktiv.NavHide.NavHidePlugin"/>
       </feature>
     </config-file>
     <config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     </config-file>
 
-    <source-file src="src/android/MacAddressPlugin.java" target-dir="src/com/badrit/MacAddress/" />
+    <source-file src="src/android/NavHidePlugin.java" target-dir="src/com/artraktiv/NavHide/" />
   </platform>
 
-  <!-- ios -->
-  <platform name="ios">
-   <config-file target="config.xml" parent="/*">
-     <feature name="MacAddressPlugin">
-       <param name="ios-package" value="MacAddressPlugin" />
-     </feature>
-   </config-file>
-
-   <header-file src="src/ios/MacAddressPlugin.h" />
-   <source-file src="src/ios/MacAddressPlugin.m" />
- </platform>
+  
 
 </plugin>
